tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetStaticParametersForMethod_Exception.bsl

EVIL_PROVIDER_GetStaticParametersForMethod_Exception.fsx(7,17,7,96): typecheck error FS3033: The type provider 'Provider.EvilProviderWhereGetStaticParametersForMethodRaisesException' reported an error: deliberate error for testing purposes
